<?xml version="1.0"?>
<package format="2">
  <name>traversability_costmap2d</name>
  <version>0.0.0</version>
  <description>The traversability_costmap2d package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
